fix spacing for more nav links

--- a/assets/sass/_header-widget-area.scss
+++ b/assets/sass/_header-widget-area.scss
@@ -1,7 +1,7 @@
 .site-header .widget-area {
     float: right;
     text-align: right;
-    width: 800px;
+    width: 820px;
 }
 
 .site-header .widget-area li {
