--- a/assets/sass/_title-area.scss
+++ b/assets/sass/_title-area.scss
@@ -1,7 +1,7 @@
 .title-area {
     float: left;
     padding: 16px 0;
-    width: 200px;
+    width: 130px;
 }
 
 .header-image .title-area {
